fixedd card Gap

--- a/src/app/temporary/infoCards/InfoCards.module.css
+++ b/src/app/temporary/infoCards/InfoCards.module.css
@@ -1,7 +1,7 @@
 .infoCardsWrapper {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 25px;
+  gap: 20px;
 }
 
 .card {
@@ -64,8 +64,9 @@
     grid-template-columns: repeat(2, 1fr);
   }
 }
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 576px) {
   .infoCardsWrapper {
     grid-template-columns: repeat(1, 1fr);
+    gap: 15px;
   }
 }
